--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.0.1
+version = 1.0.1-hotfix
 maven_group = io.github.sleepy_evelyn
 archives_base_name = more_mod_tabs
 
